--- a/api/composer.json
+++ b/api/composer.json
@@ -4,6 +4,7 @@
     "illuminate/pagination": "^5.3",
     "illuminate/events": "^5.3",
     "illuminate/http": "^5.3",
-    "gregwar/captcha": "^1.1"
+    "gregwar/captcha": "^1.1",
+    "smarty/smarty": "^3.1"
   }
 }
